WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12804
REGRESSION (
r19043
-
r19063
): suggestion popup doesn't work after pressing Option+Esc
https://bugs.webkit.org/show_bug.cgi?id=12804
Summary
REGRESSION (r19043-r19063): suggestion popup doesn't work after pressing Opti...
Alexey Proskuryakov
Reported
2007-02-18 05:06:31 PST
Steps to reproduce: 1. Type something in a text filed (e.g. in this Bugzilla bug). 2. Press Option+Esc Results: a suggestion popup appears for a moment, but disappears immediately. See also:
bug 11573
Attachments
Don't let the event that opened the popup close it; fix another suggestion popup bug
(3.90 KB, patch)
2007-02-21 14:43 PST
,
mitz
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-02-21 13:17:35 PST
Probably introduced in <
http://trac.webkit.org/projects/webkit/changeset/19049
>.
mitz
Comment 2
2007-02-21 14:43:04 PST
Created
attachment 13305
[details]
Don't let the event that opened the popup close it; fix another suggestion popup bug
Maciej Stachowiak
Comment 3
2007-02-22 02:56:05 PST
Comment on
attachment 13305
[details]
Don't let the event that opened the popup close it; fix another suggestion popup bug r=me
Sam Weinig
Comment 4
2007-02-22 07:57:29 PST
Landed in
r19790
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug